# rocm-cpp

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-SHERRY.md  README.md  SHERRY-FILES.txt  install.sh
aie/: README.md  halo_ternary_mm.cpp  halo_ternary_mm.h
aie/examples/: aie_hello.cpp
ck-prefill/: CMakeLists.txt
cpu-avx2/: CMakeLists.txt
cpu-avx2/include/halo_cpu/: ternary_gemv.h
cpu-avx2/src/: ternary_gemv_scalar_ref.cpp  ternary_gemv_tq2_avx2.cpp
cpu-avx2/tests/: test_cpu_ternary_gemv.cpp
docs/: 14-1bit-research-watch.md
include/rocm_cpp/: bitnet_model.h  bonsai.h  ck_gemm.h  kv_rotorquant.h  medusa.h  sherry.h
kernels/: hadamard_rotate_butterfly.hip  rotorquant_pack.hip  ternary_gemm_v2.hip  ternary_gemv.hip  ternary_gemv_phase5.hip  ternary_gemv_phase5_halo.hip  ternary_gemv_sherry.hip  ternary_gemv_tq1_halo.hip
results/: full-1bit-burn-20260416.md
src/: bonsai_gemv_scalar_ref.hip  bonsai_q1_gemv.hip  bonsai_tq2_gemv.hip  ck_gemm.cpp  h1b_loader.cpp  hadamard_rotate.hip  kv_cache_attn.hip  kv_cache_attn_fd.hip  kv_cache_attn_fd_rotor.hip  kv_cache_attn_i8.hip  kv_rotorquant.cpp  medusa_small_m_gemv.hip  medusa_tree_attn.hip  prefill_standalone.hip  prim_kernels.hip  sherry_gemv.hip  sherry_gemv_scalar_ref.hip  ternary_gemm_smallm.hip  ternary_gemm_smallm_scalar_ref.hip  tokenizer.cpp  wmma_peak_probe.hip
tests/: test_bonsai_e2e.cpp  test_bonsai_gemv.cpp  test_hadamard_butterfly.cpp  test_medusa_skeleton.cpp  test_sherry_e2e.cpp  test_sherry_gemv.cpp  test_standalone.cpp  test_ternary_gemm_smallm.cpp
tools/: bench_gemm  bench_gemm.cpp  bench_kv_fd.cpp  bench_kv_i8.cpp  bench_rotor.cpp  bench_sherry.cpp  bench_ternary  bench_ternary.cpp  bitnet_debate.cpp  bitnet_decode.cpp  h1b_repack_sherry.cpp  run_bench.sh  test_gemm_v2
